--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,7 @@
 .idea/misc.xml
 .idea/caches/build_file_checksums.ser
 .idea/misc.xml
+.idea/misc.xml
+.idea/caches/build_file_checksums.ser
+.idea/caches/build_file_checksums.ser
+.idea/misc.xml
