--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,39 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="appoop.com.appoop">
+
     <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/drop"
         android:label="HydroHouse"
         android:roundIcon="@mipmap/drop"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-            >
-
-        <activity android:name=".Activity.aggiungi">
+        android:theme="@style/AppTheme">
+        <activity
+            android:name=".Activity.aggiungi"
+            android:noHistory="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Activity.Info">
+        <activity
+            android:name=".Activity.Info"
+            android:noHistory="true">
             <intent-filter>
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Activity.Registro">
+        <activity
+            android:name=".Activity.Registro"
+            android:noHistory="true">
             <intent-filter>
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Activity.Analisi">
+        <activity
+            android:name=".Activity.Analisi"
+            android:noHistory="true"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Activity.AddRilevamento"></activity>
+        <activity
+            android:name=".Activity.AddRilevamento"
+            android:noHistory="true" />
+        <activity android:name=".Activity.ModifySerra" />
+        <activity android:name=".Activity.ModifyRilevamento"></activity>
     </application>
 
 </manifest>
